[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upbit-connect"
version = "1.0.1"
description = "A complete Upbit Python library for REST API and WebSocket"
readme = "README.md"
authors = [
    { name = "Cura", email = "cura@hellodev.kr" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.mypy]
strict = true
warn_return_any = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
